--- a/TN01-WFCadastroContato/TN01-WFCadastroContato.csproj
+++ b/TN01-WFCadastroContato/TN01-WFCadastroContato.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>TN01__WFCadastroContato</RootNamespace>
+    <RootNamespace>TN01_WFCadastroContato</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
